--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -165,7 +165,7 @@
     <string name="event_create">Eveniment nou</string>
   <string name="event_created_fail_text">Nu a reușit să creeze memento-uri pentru evenimente</string>
   <string name="event_created_text">Rasa a fost creat pentru a reaminti</string>
-    <string name="event_date_format">d/MM</string>
+    <string name="event_date_format">dd/MM</string>
     <string name="event_delete">Ştergeţi evenimentul</string>
     <string name="event_edit">Modificaţi evenimentul</string>
     <string name="event_full_date_format">dd/MM/yyyy</string>
@@ -279,12 +279,16 @@
     <string name="no_syncable_calendars">Niciun calendar</string>
     <string name="no_title_label">(Fără titlu)</string>
     <string name="not_synced">nesincronizat</string>
+  <string name="olympic_county">Țară</string>
+  <string name="olympic_rank">Clasament</string>
+  <string name="olympic_total">Total</string>
+  <string name="olympic_vs">VS</string>
     <string name="online_calendar_activity_label">Abonare la calendar</string>
     <string name="online_reminder_header_text">Memento</string>
     <string name="path_calendar">Aplicații de sistem/Calendar/Setări</string>
     <string name="pengzu">Ciupire</string>
     <string name="prefDialogTitle_vibrateWhen">Vibrare</string>
-    <string name="pref_error_no_ringtone_select">Nicio selecţie</string>
+    <string name="pref_error_no_ringtone_select">Sunet implicit</string>
     <string name="pref_title_alarm_remind">Alarmă</string>
     <string name="pref_title_alert_remind">Notificare pop-up</string>
     <string name="pref_title_no_remind">Niciun memento</string>
@@ -366,9 +370,17 @@
     <string name="select_date">Selectaţi data</string>
     <string name="select_synced_calendars_title">Calendare de sincronizat</string>
     <string name="set_as_wallpaper">Setați ca imagine de fundal</string>
-    <string name="setting_holiday">Zile libere</string>
+    <string name="setting_about_calendar_version">Versiune Calendar:</string>
+    <string name="setting_about_imei">IMEI:</string>
+    <string name="setting_about_miui_version">Versiune MIUI:</string>
+    <string name="setting_about_summary">Versiune:</string>
+  <string name="setting_holiday_display_desc">Zile libere în pagina de pornire a Calendarului</string>
+    <string name="setting_holiday_display_title">Arată zilele libere</string>
+    <string name="setting_holiday_reminder">Memento zile libere</string>
+    <string name="setting_homepage">Afișare în pagina de pornire</string>
     <string name="setting_others">Altele</string>
   <string name="setting_sms_import">SMS-uri import evenimente</string>
+    <string name="setting_title_about">Despre</string>
     <string name="settings_calendar">Calendar</string>
     <string name="show_day_view">Afişaţi ziua</string>
     <string name="show_newer_events">Atingeţi pentru a vedea evenimente după %1$s</string>
