--- a/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
@@ -96,9 +96,9 @@
     <string name="confirm_auto_cleaner">OK</string>
     <string name="conn_of_function_safe">Conexiune la rețea</string>
     <string name="connecting">Conectare…</string>
-    <string name="deep_clean_data_path_clean_title">Golire memorie internă</string>
-    <string name="deep_clean_normal_clean_progress_desc">au fost curățate %1$s fișiere</string>
-    <string name="deepclean_1_k_clean">Curățare printr-un click</string>
+    <string name="deep_clean_data_path_clean_title">Golire memorie cache</string>
+    <string name="deep_clean_normal_clean_progress_desc">S-au curățat %1$s fișiere</string>
+    <string name="deepclean_1_k_clean">Curățare dintr-un click</string>
     <string name="deepclean_apk_content">Ștergeți fișierele .apk sau aplicațiile inutile</string>
     <string name="deepclean_apk_summary_empty">Totul arată bine, nu există fișiere .apk ce trebuie șterse</string>
     <string name="deepclean_apk_version_error">Necunoscută</string>
@@ -116,13 +116,13 @@
     <string name="deepclean_list_item_from_miui">MIUI</string>
     <string name="deepclean_list_item_from_music">Muzică</string>
     <string name="deepclean_list_item_from_sdcard">Card SD</string>
-    <string name="deepclean_normal_item_desc1">Curățare generală</string>
-    <string name="deepclean_normal_item_desc2">"Poate fi curățat"</string>
+    <string name="deepclean_normal_item_desc1">Fișiere curățate</string>
+    <string name="deepclean_normal_item_desc2">"Activitatea aplicației de Curățare nu va scădea performanța telefonului"</string>
     <string name="deepclean_normal_item_summary_empty">Totul arată bine; nu există nimic de curățat</string>
     <string name="deepclean_normal_title">Curățare automată</string>
     <string name="deepclean_similar_ignore">Ignoraţi</string>
     <string name="deepclean_similar_summary_empty">Totul arată bine, nu există fotografii ce trebuie șterse</string>
-    <string name="deepclean_size_summary_less">Foarte puțin spațiu de stocare disponibil</string>
+    <string name="deepclean_size_summary_less">Există foarte puțin spațiu de stocare disponibil</string>
     <string name="deepclean_size_summary_more">Suficient spațiu de stocare disponibil</string>
     <string name="deepclean_size_summary_normal">Spațiu de stocare disponibil</string>
     <string name="deepclean_size_summary_not_enough">Spațiul de stocare este insuficient</string>
@@ -255,9 +255,9 @@
     <string name="long_click_dialog_title">Aviz</string>
     <string name="low_memory_clean_dialog_msg">Trebuie să curățați mai întâi cel puțin %1$s fișiere</string>
     <string name="low_memory_clean_dialog_ok_button">OK</string>
-    <string name="low_memory_clean_dialog_title">NU mai există spațiu de stocare disponibil</string>
+    <string name="low_memory_clean_dialog_title">NU mai există suficient spațiu de stocare disponibil</string>
     <string name="low_memory_warning_dialog_cancel_button">Renunțați</string>
-    <string name="low_memory_warning_dialog_msg">Nu mai există spațiu de stocare disponibil pe telefon; trebuie să ștergeți câteva fișiere mai întâi</string>
+    <string name="low_memory_warning_dialog_msg">Ștergeți câteva fișiere pentru a putea continua</string>
     <string name="low_memory_warning_dialog_ok_button">Curățați</string>
     <string name="low_memory_warning_dialog_title">Spațiul de stocare de pe telefon este epuizat</string>
     <string name="mainbtn_text_quick_cleanup">Curăţaţi %s</string>
