--- a/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
+++ b/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="add_alarm">Adăugaţi o alarmă</string>
-    <string name="alarm_alert">Ton sonerie prestabilit</string>
     <string name="alarm_alert_alert_silenced">Alarmă oprită după %d minute.</string>
     <string name="alarm_alert_snooze_set">Se amână pentru %d minute.</string>
     <string name="alarm_ascending_mode_summary">Volum ascendent până la valoarea selectată</string>
@@ -14,7 +13,6 @@
     <string name="alarm_notify_snooze_label">%s amânat</string>
     <string name="alarm_notify_text">Amânaţi sau anulaţi alarma</string>
     <string name="alarm_repeat">Repetare</string>
-    <string name="alarm_screen">Ecran alarmă şi ton sonerie</string>
     <string name="alarm_settings">Setări alarmă</string>
     <string name="alarm_vibrate">Vibrare</string>
     <string name="alarm_volume_summary">Setaţi volumul alarmei</string>
@@ -58,7 +56,7 @@
     <string name="hour">1 oră</string>
     <string name="hour_unit">h</string>
     <string name="hours">%s ore</string>
-    <string name="keep_screen_on">Nu se deconectează ecranul</string>
+    <string name="keep_screen_on">Menține ecranul activ</string>
     <string name="label">Setaţi o etichetă</string>
     <string name="label_pref_summary">Etichetați această alarmă</string>
     <string name="lap">Circuit</string>
@@ -115,7 +113,7 @@
     <string name="timer_clock_alert_text">Setați temporizatorul</string>
     <string name="timer_continue">Continuaţi</string>
     <string name="timer_got_it">OK</string>
-    <string name="timer_item_duration_display">%1$d min %2$d sec</string>
+    <string name="timer_item_duration_display">%1$d min și %2$d sec</string>
     <string name="timer_item_label_hint">Nume temporizator</string>
     <string name="timer_item_picker_hour">H</string>
     <string name="timer_item_picker_minute">M</string>
@@ -124,14 +122,14 @@
     <string name="timer_notify_text">Amânaţi sau anulaţi temporizatorul.</string>
     <string name="timer_start_alarm">Timpul a expirat</string>
     <string name="timer_title">Temporizator</string>
-    <string name="timezone_exist_error_message">Acest ceas se afişează deja</string>
+    <string name="timezone_exist_error_message">"Acest fus orar este afișat deja"</string>
     <string name="today">Astăzi</string>
     <string name="tomorrow">Mâine</string>
     <string name="turn_off_a_repeat_alarm">Opriți alarma repetitivă</string>
     <string name="turn_off_this_repeat_alarm">Opriți această alarmă repetitivă</string>
     <string name="vibrate_pref_summary">Vibrare în timpul alarmei</string>
-    <string name="vibrate_when_ringing">Vibrare în timpul soneriei</string>
-    <string name="volume_button_setting_summary">Setaţi funcţiile butoanelor de volum în timpul unei alarme</string>
+    <string name="vibrate_when_ringing">Vibrare în tim ce sună</string>
+    <string name="volume_button_setting_summary">"Setaţi funcţiile butoanelor de volum în timpul unei alarme"</string>
     <string name="volume_button_setting_title">Butoane de volum</string>
     <string name="workday_alarm_clock">Alarmă în zilele lucrătoare</string>
     <string name="worldclock_empty_text">Niciun ceas</string>
