--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -430,7 +430,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="micloud_introduce">Salvați în mod automat fotografiile și videoclipurile(este necesar un cont Mi)</string>
     <string name="more_album_hint">, etc.</string>
     <string name="more_face_album_name">Mai multe persoane</string>
-    <string name="move_to_other_albums_tip">Sincronizarea în Mi Cloud a albumului va fi oprită dacă veți muta acest album în lista Alte albume. Îl mutați acum?</string>
+    <string name="move_to_other_albums_tip">Sincronizarea cu Mi Cloud va fi oprită dacă veți muta acest album în lista Alte albume. Îl mutați acum?</string>
     <string name="must_pick_file">Selectaţi o fotografie</string>
     <string name="name_split">,</string>
     <string name="need_to_turn_on_network">Nu aveţi o conexiune la internet</string>
@@ -473,7 +473,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="operation_not_show_in_photos_tab">"Nu arăta în Fotografii"</string>
     <string name="operation_projection">Distribuiți</string>
     <string name="operation_remove_from_face_album">Eliminaţi chipul</string>
-    <string name="operation_remove_from_other_albums">Eliminați din Alte albume</string>
+    <string name="operation_remove_from_other_albums">Mutați din Alte albume</string>
     <string name="operation_remove_secret">Afișați</string>
     <string name="operation_save">Salvați</string>
     <string name="operation_send">Trimiteți</string>
@@ -561,7 +561,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="relation_text_mother">Mamă</string>
     <string name="relation_with_you">Alegeți gradul de rudenie</string>
     <string name="release_space_finish_format">A fost eliberat %s spațiu de stocare intern</string>
-    <string name="remove_from_other_albums_tip">Sincronizarea albumului în Mi Cloud ar trebui să fie pornită atunci când il eliminați din Alte albume; eliminați albumul acum?</string>
+    <string name="remove_from_other_albums_tip">Porniți sincronizarea cu Mi Cloud pentru a muta elemente din Alte albume. Mutați acum?</string>
     <string name="remove_from_secret_fail">"Nu s-a putut elimina din albumul secret"</string>
     <string name="remove_from_secret_failed_with_reason">"Nu se poate elimina din albumul secret. %1$s."</string>
     <string name="remove_from_secret_failed_with_reason_and_count">"%2$s elemente nu au putut fi eliminate din albumul secret. %1$s."</string>
@@ -675,7 +675,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="trash_bin_summary">Vedeți fotografiile salvate care au fost șterse recent</string>
     <string name="try_to_send">Trimiteţi</string>
     <string name="turn_off_and_move">Dezactivați și mutați</string>
-    <string name="turn_on_and_remove">Activați și eliminați</string>
+    <string name="turn_on_and_remove">Activați și mutați</string>
     <string name="turn_on_sync">Activați sincronizarea</string>
     <string name="unpublish_failed">Eşuare</string>
     <string name="unpublish_succeeded">Album nepublicat</string>
